--- a/web/css/ann-tuil.css
+++ b/web/css/ann-tuil.css
@@ -9,17 +9,6 @@ and open the template in the editor.
 */
 
 /* ---------------------------- LOGIN.JSP ---------------------------- */
-/* Imagen de fondo.*/
-/*img.bgImg {
-    //min-height: 100%;
-    //min-width: 100%;
-    //width: 100%;
-    //height: 100%;
-    position: fixed;
-    size: auto;
-    top: 0;
-    left: 0;
-}*/
 
 .bodyLogin{
     background-image: url('../img/login.jpg');
@@ -39,7 +28,7 @@ and open the template in the editor.
    margin-left: -50px;
    margin: auto;
    width: 460px;
-   height: 170px;
+   height: 190px;
    background-color: rgb(0,0,0,.8);
    display: table;
 }
@@ -71,6 +60,10 @@ and open the template in the editor.
     margin-top: 10px;
 }
 
+.msgAlert{
+    font-size: 10pt;
+    color: red;
+}
 /* */
 
 /* ------------------------------------------------------------------- */
